# double_pendulum_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.sh  requirements.txt
balancing/: CMakeLists.txt
balancing/single/: main.py  pendulum_env.py  test.py  train.py
model/: env_test.py  main.py  run_trained.py  single_pendulum.urdf  single_pendulum_env.py  supress_log_dump.py  train.py
model/double/: pendulum.urdf  pendulum_env.py  run_trained.py  train.py
model/single/: env_test.py  pendulum_env.py  run_trained.py  train.py
simulation/: CMakeLists.txt
simulation/pendulum/: double.cpp  double.hpp  pendulum.hpp  simulation.hpp  single.cpp  single.hpp
simulation/pendulum/python_export/: CMakeLists.txt
simulation/pendulum/python_export/impl/: export.cpp
simulation/pendulum/python_export/packaging/: pyproject.toml
simulation/pendulum/python_export/pendulum_simulation/: __init__.py
simulation/visualizer/: double.cpp  main.cpp  single.cpp
simulation/visualizer/renderer/: renderer.cpp  renderer.hpp
